<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_app">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="311dp"
        android:layout_height="356dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="53dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPostTitle"
            android:hint="@string/title"
            android:inputType="text"
            android:textColorHint="@color/d_blue_app"
            android:background="@drawable/custom_edit_text"
            android:autofillHints=""
            android:layout_marginBottom="15dp"
            android:textColor="@color/d_blue_app"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextPostDesc"
            android:hint="@string/description"
            android:textColorHint="@color/d_blue_app"
            android:background="@drawable/custom_edit_text"
            android:autofillHints=""
            android:gravity="top"
            android:paddingTop="8dp"
            android:layout_marginBottom="15dp"
            android:textColor="@color/d_blue_app"
            android:inputType="textMultiLine"
            android:lines="6"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/option_one_text"
            android:hint="@string/option_1"
            android:inputType="text"
            android:textColorHint="@color/d_blue_app"
            android:background="@drawable/custom_edit_text"
            android:autofillHints=""
            android:layout_marginBottom="15dp"
            android:textColor="@color/d_blue_app"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/option_two_text"
            android:hint="@string/option_2"
            android:inputType="text"
            android:textColorHint="@color/d_blue_app"
            android:background="@drawable/custom_edit_text"
            android:autofillHints=""
            android:layout_marginBottom="15dp"
            android:textColor="@color/d_blue_app"/>


        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/addPostButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="129dp"
        android:layout_weight="1"
        android:text="Create Topic"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/d_blue_app"
        android:textColor="@color/white_app"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/backPostButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="200dp"
        android:text="@string/back_to_topics"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/d_blue_app"
        android:textColor="@color/white_app"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="228dp"
        android:layout_height="45dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="91dp"
        android:text="@string/add_a_voting_topic"
        android:textAlignment="center"
        android:textColor="@color/white_app"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>