...
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/d_blue_app"
        android:textColor="@color/white_app"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/goToRegister"
        android:layout_marginTop="15sp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/click_to_registration"
...
