...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/d_blue_app"
            android:textColor="@color/white_app"
...
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/write_data"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/click_to_add_data"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/d_blue_app"
            android:textColor="@color/white_app"
...
