...
            android:paddingEnd="20sp"
            tools:ignore="RtlSymmetry"
            android:checked="true"
            android:buttonTint="@color/l_blue_app"/>

        <RadioButton
            android:id="@+id/manager_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/l_blue_app"
            android:textSize="18sp"
            android:paddingEnd="20sp"
            android:text="@string/manager"
...
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:cornerRadius="12dp"
        android:backgroundTint="@color/d_blue_app"
        android:textColor="@color/white_app"
...
